[metadata]
name = yrouter
version = 0.0.2
author = Tidiane Dia
author_email = tidiane@therookiecoder.com
description = A URL routing package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tijani-dia/yrouter
project_urls =
    Bug Tracker = https://github.com/pypa/tijane-dia/yrouter
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
[bdist_wheel]
python-tag = py3

[tool:pytest]
testpaths = tests src/yrouter
addopts = --doctest-modules

[tool:isort]
profile = black
known_first_party = "yrouter"

[flake8]
max-line-length = 97